# LiveDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/wangxi/livedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: com_example_wangxi_livedemo_jni_PushNative.h  custom_log.h
app/src/main/java/com/example/wangxi/livedemo/: MainActivity.java
app/src/main/java/com/example/wangxi/livedemo/jni/: PushNative.java
app/src/main/java/com/example/wangxi/livedemo/listener/: LiveStateChangeListener.java
app/src/main/java/com/example/wangxi/livedemo/params/: AudioParam.java  VideoParam.java
app/src/main/java/com/example/wangxi/livedemo/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
app/src/test/java/com/example/wangxi/livedemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
